# tennisaboplaner

./: .gitignore  .pylintrc  LICENSE  README.md  log.ini  mypy.ini  pyproject.toml  requirements.txt  ruff.toml  run copy.py  run copy.py.lprof  run.py  schedule.xlsx  settings.json  settings2.json  tox.ini
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: run_tests.yml
matchscheduler/: match.py  optimizer.py  player.py  printer.py  round.py  schedule.py  scoring_algorithm.py  season.py
src/matchscheduler/: match.py  optimizer.py  player.py  printer.py  round.py  schedule.py  scoring_algorithm.py  season.py
tests/: test_match.py  test_player.py  test_round.py  test_schedule.py  test_season.py
tests/integration/: test_optimize.py  test_performance.py  test_printer.py
tests/integration/expected/: test_optimize.json
tests/integration/input/: settings.json  test_exclusion.json  test_printer.json  test_too_less_player.json
tests/unit/: test_match.py  test_optimizer.py  test_player.py  test_round.py  test_schedule.py  test_scoring_algorithm.py  test_season.py
