[project]
name = "matchscheduler"
version = "0.1.0"
description = "Tennisaboplaner is a script to schedule matches over a season. It's purpose is to give a schedule, if you are group of people that meet weekly for a tennis match and have only a number of limited courts, for instance indoor / in the winter season."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "icalendar>=6.1.0",
    "joblib>=1.4.2",
    "line-profiler>=4.1.3",
    "numpy>=2.1.3",
    "openpyxl>=3.1.5",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "pylint>=3.3.1",
    "pyright>=1.1.389",
    "pytest>=8.3.3",
    "ruff>=0.8.1",
    "tox>=4.23.2",
    "types-openpyxl>=3.1.5.20241126",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"